# personal-assistant-cli

./: LICENSE  README.md  pyproject.toml  requirements.txt
app/: bootstrap.py  cli.py  config.py
app/application/: contacts_service.py  notes_service.py
app/domain/: models.py  repository.py
app/ui/: __init__.py  calendar.py  contacts.py  helpers.py  notes.py  services.py
docs/: BACKLOG.md
src/app/application/: contacts_service.py
src/app/domain/: birthdays.py  contacts_repository.py
src/app/domain/common/: validators.py
tests/: conftest.py  test_calendar_service.py  test_contacts_service.py  test_notes_service.py
