[project]
name = "personal-assistant-cli"
version = "0.1.0"
description = "Personal Assistant CLI — manage contacts, notes & birthdays"
requires-python = ">=3.12"
dependencies = [
    "sqlmodel>=0.0.37",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.6",
    "pre-commit>=4.5.1",
    "mypy>=1.19.1",
]

[project.scripts]
assistant = "app.main:main"

[tool.ruff]
target-version = "py312"
line-length = 99
src = ["."]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
